--- a/css/index.css
+++ b/css/index.css
@@ -126,6 +126,51 @@ html,body{
     display: block;
 }
 
+#img-1,#img-2,#img-3,#img-4,#img-5,#img-6 {
+    width: 261px;
+    height: 195px;
+    float: left;
+    color: #ffffff;
+    -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+    clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+    transform: translateY(-30px);
+    opacity: 0;
+    animation-name: titleAnimation;
+    animation-timing-function:ease;
+    animation-duration: 5s;
+    animation-delay: 0.6s;
+    -webkit-animation-fill-mode: forwards;
+    -webkit-animation-iteration-count: infinite;
+}
+
+@keyframes titleAnimation {
+    0% {
+        transform: translateY(-50px);
+        opacity: 0;
+        -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+        clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 80%);
+    }
+    20% {
+        transform: translateY(0);
+        opacity: 1;
+        -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 30%);
+        clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 30%);
+    }
+    80% {
+        transform: translateY(0);
+        opacity: 1;
+        -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 30%);
+        clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 30%);
+    }
+    100% {
+        transform: translateY(50px);
+        opacity: 0;
+        -webkit-clip-path: polygon(100% 0, 100% -30%, 0 100%, 0 100%);
+        clip-path: polygon(100% 0, 100% -30%, 0 100%, 0 100%);
+
+    }
+}
+
 /*cf-members*/
 #cf-members {
     width:90%;
